--- a/app/src/main/res/layout/activity_calendar.xml
+++ b/app/src/main/res/layout/activity_calendar.xml
@@ -173,6 +173,19 @@ android:padding="16dp">
         tools:ignore="MissingClass"/>
 </androidx.cardview.widget.CardView>
 
+
+    <LinearLayout
+        android:id="@+id/emptyDayContainer"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:visibility="gone"
+        android:padding="16dp"
+        app:layout_constraintTop_toBottomOf="@id/calendarView"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
+
 <!-- RecyclerView for Classes -->
 <androidx.recyclerview.widget.RecyclerView
     android:id="@+id/classRecycler"
