calander updated Tauqir

--- a/app/src/main/res/layout/dialog_add_task_without_class.xml
+++ b/app/src/main/res/layout/dialog_add_task_without_class.xml
@@ -46,4 +46,18 @@
 
     </com.google.android.material.textfield.TextInputLayout>
 
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:startIconTint="@color/primaryColor">
+
+        <Spinner
+            android:id="@+id/timeSlotSpinner"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="8dp"/>
+
+    </com.google.android.material.textfield.TextInputLayout>
+
 </LinearLayout>
