--- a/app/src/main/res/layout/item_class_task.xml
+++ b/app/src/main/res/layout/item_class_task.xml
@@ -33,8 +33,19 @@
             android:layout_marginStart="25dp"
             android:textSize="16sp"
             android:textColor="@color/primaryText"/>
+        <!--
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/actionButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
+            android:layout_marginEnd="8dp"
+            app:iconPadding="4dp"
+            app:iconTint="@color/white"
+            android:textSize="12sp"/>
 
-        <!-- Task Count Badge -->
+   -->
         <TextView
             android:id="@+id/taskCountBadge"
             android:layout_width="20dp"
@@ -55,6 +66,8 @@
             android:layout_marginEnd="8dp"
             android:src="@drawable/ic_delete_forever"
             app:tint="@color/colorError"/>
+
+
 
     </RelativeLayout>
 </androidx.cardview.widget.CardView>
