--- a/app/src/main/res/layout/activity_teacher_registration.xml
+++ b/app/src/main/res/layout/activity_teacher_registration.xml
@@ -69,6 +69,25 @@
                 android:padding="12dp"
                 android:textColorHint="#808080"
                />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Acronym"
+                android:textStyle="bold"
+                android:textSize="16sp"
+                android:layout_marginTop="16dp"
+                android:layout_marginBottom="8dp"
+                android:textColor="#000000" />
+
+            <EditText
+                android:id="@+id/Acronymedittext"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:hint="enter teacher acronym"
+                android:background="@xml/edit_text_bg"
+                android:padding="12dp"
+                android:textColorHint="#808080"
+                />
 
 
             <!-- Student ID -->
