--- a/app/src/main/res/layout/activity_cr_home_page.xml
+++ b/app/src/main/res/layout/activity_cr_home_page.xml
@@ -673,7 +673,7 @@
 
         <!-- Include or inflate nav_menu_layout.xml here -->
         <include
-            layout="@layout/nav_menu_layout"
+            layout="@layout/cr_nav_menu_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
     </LinearLayout>
