--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -40,31 +40,33 @@
                 android:layout_marginBottom="8dp"
                 android:textColor="#000000" />
 
-            <com.google.android.material.textfield.TextInputLayout
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                android:id="@+id/til_email"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="16dp"
-                android:hint="Email"
-                app:boxStrokeColor="#E1E1E1"
-                app:boxBackgroundMode="outline"
-                app:startIconDrawable="@drawable/ic_search">
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/emailEditText"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@xml/edit_text_bg"
-                    android:inputType="textEmailAddress"
-                    android:textColor="#000000" />
-            </com.google.android.material.textfield.TextInputLayout>
 
             <EditText
                 android:id="@+id/emailEditText1"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:hint="enter email address"
+                android:background="@xml/edit_text_bg"
+                android:padding="12dp"
+                android:textColorHint="#808080"
+                android:inputType="textEmailAddress" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textStyle="bold"
+                android:text="Name"
+                android:textSize="16sp"
+                android:layout_marginTop="16dp"
+
+                android:layout_marginBottom="8dp"
+                android:textColor="#000000" />
+
+
+            <EditText
+                android:id="@+id/std_nameText"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:hint="enter student name"
                 android:background="@xml/edit_text_bg"
                 android:padding="12dp"
                 android:textColorHint="#808080"
