--- a/app/src/main/res/layout/activity_rooms.xml
+++ b/app/src/main/res/layout/activity_rooms.xml
@@ -165,6 +165,18 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent" />
 
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/RoomsRecyclerView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:clipToPadding="false"
+                    android:paddingVertical="30dp"
+                    android:foregroundGravity="center"
+                    android:textAlignment="center"
+                    android:nestedScrollingEnabled="false"
+                    app:layout_constraintTop_toBottomOf="@id/Divider"
+                    app:layout_constraintStart_toStartOf="parent" />
+
 
 
 
