calander for other without editing power Tauqir

--- a/app/src/main/res/layout/activity_cr_home_page.xml
+++ b/app/src/main/res/layout/activity_cr_home_page.xml
@@ -522,6 +522,7 @@
                             app:cardElevation="8dp">
 
                             <LinearLayout
+                                android:id="@+id/otherRoutine"
                                 android:layout_width="match_parent"
                                 android:layout_height="match_parent"
                                 android:orientation="vertical"
