--- a/app/src/main/res/drawable/spinner_item_background.xml
+++ b/app/src/main/res/drawable/spinner_item_background.xml
@@ -1,5 +1,24 @@
-<?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_pressed="true" android:drawable="@color/green_dark" />
-    <item android:drawable="@color/green_light" />
+    <item android:state_activated="true">
+        <shape android:shape="rectangle">
+            <solid android:color="#9E9E9E"/> <!-- Selected item background -->
+            <corners android:radius="4dp"/>
+        </shape>
+    </item>
+
+    <item android:state_pressed="true">
+        <shape android:shape="rectangle">
+            <corners android:radius="2dp"/>
+            <solid android:color="@color/Theme_green"/>
+        </shape>
+    </item>
+    <item>
+        <shape android:shape="rectangle">
+            <corners android:radius="2dp"/>
+            <stroke
+                android:width="1dp"
+                android:color="#30000000"/>
+            <solid android:color="@color/Theme_Lightgreen"/>
+        </shape>
+    </item>
 </selector>
