--- a/app/src/main/res/layout/activity_others_routine.xml
+++ b/app/src/main/res/layout/activity_others_routine.xml
@@ -15,7 +15,9 @@
         android:id="@+id/appBarLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        tools:ignore="MissingConstraints">
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
 
         <!-- Top card view start (now inside AppBarLayout) -->
         <com.google.android.material.card.MaterialCardView
@@ -74,65 +76,86 @@
     </com.google.android.material.appbar.AppBarLayout>
 
     <!-- Batch and Section Selection Row -->
-    <LinearLayout
-        android:id="@+id/selectionRow"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:gravity="center_vertical"
-        android:padding="5dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginStart="10dp"
-        app:layout_constraintTop_toBottomOf="@id/appBarLayout"
-        app:layout_constraintStart_toStartOf="parent">
 
-        <TextView
-            android:id="@+id/tvBatchLabel"
-            android:layout_width="wrap_content"
+
+
+
+    <androidx.core.widget.NestedScrollView
+
+        android:id="@+id/scrollView"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:clipToPadding="false"
+        android:paddingBottom="16dp">
+
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Batch:"
-            android:textSize="16sp"
-            android:textStyle="bold"/>
-
-        <Spinner
-            android:id="@+id/spinnerBatch"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="16dp"/>
-
-        <TextView
-            android:id="@+id/tvSectionLabel"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Section:"
-            android:textSize="16sp"
-            android:textStyle="bold"/>
-
-        <Spinner
-            android:id="@+id/spinnerSection"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"/>
-    </LinearLayout>
-
-
-
-
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="90dp"
-        app:layout_constraintTop_toBottomOf="@id/selectionRow">
+            android:orientation="vertical">
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
 
-        app:layout_constraintTop_toBottomOf="@id/selectionRow"
+
+        app:layout_constraintTop_toBottomOf="@id/appBarLayout"
         android:padding="16dp"
         >
+
+        <LinearLayout
+            android:id="@+id/selectionRow"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center_vertical"
+            android:padding="5dp"
+            android:layout_marginTop="5dp"
+
+
+            app:layout_constraintStart_toStartOf="parent"
+            tools:ignore="MissingConstraints">
+
+            <androidx.cardview.widget.CardView
+
+
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:cardCornerRadius="12dp"
+                app:cardElevation="6dp"
+                android:layout_margin="6dp"
+                android:background="@color/Theme_green">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:padding="12dp">
+
+                    <Spinner
+                        android:id="@+id/spinnerBatch"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:padding="10dp"
+                        android:layout_marginEnd="8dp"/>
+
+                    <Spinner
+                        android:id="@+id/spinnerSection"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:padding="10dp"/>
+                </LinearLayout>
+            </androidx.cardview.widget.CardView>
+        </LinearLayout>
+
 
         <Button
             android:id="@+id/btn1"
@@ -140,9 +163,11 @@
             android:layout_height="wrap_content"
             android:text="See calender and tasks"
             android:textColor="@color/primaryDark"
-            app:layout_constraintStart_toStartOf="parent"
+
+
             android:backgroundTint="@color/Theme_Lightgreen"
-            tools:ignore="MissingConstraints" />
+            app:layout_constraintTop_toBottomOf="@id/selectionRow"
+            />
 
 
 
@@ -283,16 +308,29 @@
         app:layout_constraintTop_toBottomOf="@id/nextPrevContainer"/>
 
     <!-- RecyclerView Carousel -->
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/carouselRecyclerView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:paddingVertical="16dp"
-        app:layout_constraintTop_toBottomOf="@id/carouselTitle"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/carouselRecyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:paddingVertical="16dp"
+            android:clipToPadding="false"
+            android:nestedScrollingEnabled="false"
+            app:layout_constraintTop_toBottomOf="@id/carouselTitle"
+            />
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
-    </ScrollView>
+
+        </LinearLayout>
+
+
+
+    </androidx.core.widget.NestedScrollView>
+
+
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
