--- a/app/src/main/res/layout/activity_other_calendar.xml
+++ b/app/src/main/res/layout/activity_other_calendar.xml
@@ -1,3 +1,7 @@
+
+
+
+
 <FrameLayout
     android:layout_width="match_parent"
     android:backgroundTint="@color/Layout_Background"
@@ -13,11 +17,76 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:padding="16dp"
+        android:paddingLeft="8dp"
+        android:paddingRight="8dp"
         android:background="@color/Layout_Background"
         app:cardElevation="8dp">
 
 
+        <com.google.android.material.appbar.AppBarLayout
+            android:id="@+id/appBarLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent">
+
+            <!-- Top card view start (now inside AppBarLayout) -->
+            <com.google.android.material.card.MaterialCardView
+                android:id="@+id/topCardView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_scrollFlags="scroll|enterAlways"
+                app:cardBackgroundColor="@color/Theme_green"
+                app:cardElevation="8dp"
+                app:cardPreventCornerOverlap="true"
+                app:shapeAppearanceOverlay="@style/CustomCardShape">
+
+                <!-- ConstraintLayout for your two images (left nav_bar and center new_home_top) -->
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <!-- ImageView for nav_bar on the left -->
+                    <ImageView
+                        android:id="@+id/leftNavBarImage"
+                        android:layout_width="26dp"
+                        android:layout_height="22dp"
+                        android:layout_marginStart="20dp"
+                        android:adjustViewBounds="true"
+                        android:contentDescription="@null"
+                        android:scaleType="fitCenter"
+                        android:scaleX="1.5"
+                        android:scaleY="1.5"
+                        android:src="@drawable/back"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <!-- ImageView for new_home_top in the center -->
+                    <ImageView
+                        android:id="@+id/selectRoleTopImage"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="-60dp"
+                        android:adjustViewBounds="true"
+                        android:scaleType="fitCenter"
+                        android:contentDescription="@null"
+                        android:src="@drawable/new_home_top"
+                        android:scaleX="0.8"
+                        android:scaleY="0.8"
+                        app:layout_constraintStart_toEndOf="@id/leftNavBarImage"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintHorizontal_bias="0.5" />
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+            </com.google.android.material.card.MaterialCardView>
+            <!-- Top card view ends -->
+
+        </com.google.android.material.appbar.AppBarLayout>
 
         <!-- CardView for Batch & Section Selection -->
         <androidx.cardview.widget.CardView
@@ -52,15 +121,6 @@
         </androidx.cardview.widget.CardView>
 
 
-        <Button
-            android:id="@+id/btn1"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="See routine carousel"
-            android:textColor="@color/primaryDark"
-            android:layout_margin="5dp"
-            android:padding="5dp"
-            android:backgroundTint="@color/Theme_Lightgreen"/>
         <!-- 🟠 🟢 Color Legend (Tasks & Classes) -->
         <LinearLayout
             android:layout_width="match_parent"
@@ -69,7 +129,7 @@
             android:gravity="center"
 
 
-            android:layout_marginTop="12dp"
+            android:layout_marginTop="6dp"
             android:layout_marginBottom="5dp">
 
             <!-- Have Task Indicator -->
