--- a/app/src/main/res/layout/activity_others_routine.xml
+++ b/app/src/main/res/layout/activity_others_routine.xml
@@ -38,18 +38,18 @@
                 <!-- ImageView for nav_bar on the left -->
                 <ImageView
                     android:id="@+id/leftNavBarImage"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="26dp"
+                    android:layout_height="22dp"
                     android:layout_marginStart="20dp"
                     android:adjustViewBounds="true"
-                    android:scaleType="fitCenter"
                     android:contentDescription="@null"
-                    android:src="@drawable/nev_bar"
+                    android:scaleType="fitCenter"
                     android:scaleX="1.5"
                     android:scaleY="1.5"
+                    android:src="@drawable/back"
+                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent" />
+                    app:layout_constraintTop_toTopOf="parent" />
 
                 <!-- ImageView for new_home_top in the center -->
                 <ImageView
@@ -115,7 +115,7 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:gravity="center_vertical"
-            android:padding="5dp"
+            android:padding="0dp"
             android:layout_marginTop="5dp"
 
 
@@ -127,7 +127,7 @@
 
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:cardCornerRadius="12dp"
+                app:cardCornerRadius="8dp"
                 app:cardElevation="6dp"
                 android:layout_margin="6dp"
                 android:background="@color/Theme_green">
@@ -157,16 +157,7 @@
         </LinearLayout>
 
 
-        <Button
-            android:id="@+id/btn1"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="See calender and tasks"
-            android:textColor="@color/primaryDark"
 
-            android:backgroundTint="@color/Theme_Lightgreen"
-            app:layout_constraintTop_toBottomOf="@id/selectionRow"
-            />
 
 
 
@@ -179,7 +170,7 @@
         android:layout_marginHorizontal="5dp"
         app:cardElevation="4dp"
         app:cardCornerRadius="8dp"
-        app:layout_constraintTop_toBottomOf="@id/btn1"
+        app:layout_constraintTop_toBottomOf="@id/selectionRow"
 
 
 
