--- a/app/src/main/res/layout/activity_rooms.xml
+++ b/app/src/main/res/layout/activity_rooms.xml
@@ -165,17 +165,113 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent" />
 
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/RoomsRecyclerView"
+                <LinearLayout
+                        app:layout_constraintTop_toBottomOf="@id/Divider"
+                        android:id="@+id/rkbs"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical"
+                        android:padding="10dp">
+
+                        <ImageView
+                            app:layout_constraintTop_toBottomOf="@id/Divider"
+
+                            android:id="@+id/rkb_g"
+                            android:layout_marginBottom="10dp"
+                            android:layout_width="match_parent"
+                            android:layout_height="700dp"
+                            android:adjustViewBounds="true"
+                            android:scaleType="centerCrop"
+                            android:src="@drawable/loading_pic"
+                            android:contentDescription="@null" />
+
+                        <ImageView
+                            android:id="@+id/rkb_1"
+                            android:layout_marginBottom="10dp"
+
+                            android:layout_width="match_parent"
+                            android:layout_height="700dp"
+                            android:adjustViewBounds="true"
+                            android:scaleType="centerCrop"
+                            android:src="@drawable/loading_pic"
+                            android:contentDescription="@null" />
+
+                        <ImageView
+                            android:id="@+id/rkb_2"
+                            android:layout_marginBottom="10dp"
+
+                            android:layout_width="match_parent"
+                            android:layout_height="700dp"
+                            android:adjustViewBounds="true"
+                            android:scaleType="centerCrop"
+                            android:src="@drawable/loading_pic"
+                            android:contentDescription="@null" />
+
+                        <ImageView
+                            android:id="@+id/rkb_3"
+                            android:layout_marginBottom="10dp"
+                            android:layout_width="match_parent"
+                            android:layout_height="700dp"
+                            android:adjustViewBounds="true"
+                            android:scaleType="centerCrop"
+                            android:src="@drawable/loading_pic"
+                            android:contentDescription="@null" />
+
+                    </LinearLayout>
+                <LinearLayout
+                    app:layout_constraintTop_toBottomOf="@id/rkbs"
+
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:clipToPadding="false"
-                    android:paddingVertical="30dp"
-                    android:foregroundGravity="center"
-                    android:textAlignment="center"
-                    android:nestedScrollingEnabled="false"
-                    app:layout_constraintTop_toBottomOf="@id/Divider"
-                    app:layout_constraintStart_toStartOf="parent" />
+                    android:orientation="vertical"
+                    android:padding="10dp">
+
+                    <ImageView
+                        app:layout_constraintTop_toBottomOf="@id/rkb_3"
+
+                        android:id="@+id/rab_g"
+                        android:layout_marginBottom="10dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="700dp"
+                        android:adjustViewBounds="true"
+                        android:scaleType="centerCrop"
+                        android:src="@drawable/loading_pic"
+                        android:contentDescription="@null" />
+
+                    <ImageView
+                        android:id="@+id/rab_1"
+                        android:layout_marginBottom="10dp"
+
+                        android:layout_width="match_parent"
+                        android:layout_height="700dp"
+                        android:adjustViewBounds="true"
+                        android:scaleType="centerCrop"
+                        android:src="@drawable/loading_pic"
+                        android:contentDescription="@null" />
+
+                    <ImageView
+                        android:id="@+id/rab_2"
+                        android:layout_marginBottom="10dp"
+
+                        android:layout_width="match_parent"
+                        android:layout_height="700dp"
+                        android:adjustViewBounds="true"
+                        android:scaleType="centerCrop"
+                        android:src="@drawable/loading_pic"
+                        android:contentDescription="@null" />
+
+                    <ImageView
+                        android:id="@+id/rab_3"
+                        android:layout_marginBottom="10dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="700dp"
+                        android:adjustViewBounds="true"
+                        android:scaleType="centerCrop"
+                        android:src="@drawable/loading_pic"
+                        android:contentDescription="@null" />
+
+                </LinearLayout>
+
 
 
 
