teacher add task and cclass Tauqir

--- a/app/src/main/res/layout/dialog_add_task_without_class.xml
+++ b/app/src/main/res/layout/dialog_add_task_without_class.xml
@@ -37,6 +37,21 @@
         app:startIconTint="@color/primaryColor">
 
         <EditText
+            android:id="@+id/instructorEditText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Instructor Acronym"
+            android:inputType="textCapWords"/>
+
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+
+        app:startIconTint="@color/primaryColor">
+
+        <EditText
             android:id="@+id/taskDetails"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
