--- a/app/src/main/res/layout/activity_room_upload_page.xml
+++ b/app/src/main/res/layout/activity_room_upload_page.xml
@@ -10,10 +10,14 @@
     android:background="@color/colorGreenLight">
 
     <!-- CardView to hold the icon and the button -->
-
+<LinearLayout
+    android:layout_marginTop="50dp"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
     <androidx.cardview.widget.CardView
         android:id="@+id/room_csv_uploadCard"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
         app:cardCornerRadius="16dp"
@@ -58,6 +62,49 @@
     </androidx.cardview.widget.CardView>
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/floor_pic_uploadCard"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        app:cardCornerRadius="16dp"
+        app:cardElevation="8dp"
+        app:cardUseCompatPadding="true"
+        tools:layout_editor_absoluteX="16dp"
+        tools:layout_editor_absoluteY="365dp"
+        tools:ignore="MissingConstraints">
+
+        <!-- A horizontal LinearLayout for the icon and button side by side -->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:orientation="horizontal"
+            android:padding="16dp">
+
+            <!-- Upload Icon -->
+            <ImageView
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:layout_marginEnd="16dp"
+                android:contentDescription="Upload Icon"
+                android:src="@drawable/ic_upload" />
+
+            <!-- Upload CSV Button -->
+            <Button
+                android:id="@+id/uploadfloorPicButton"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:backgroundTint="#006A00"
+                android:paddingVertical="12dp"
+                android:text="Upload Floor's Pictures"
+                android:textAllCaps="false"
+                android:textColor="@android:color/white"
+                android:textSize="16sp"
+                android:textStyle="bold" />
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
+    <androidx.cardview.widget.CardView
         android:id="@+id/room_pic_uploadCard"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -88,18 +135,20 @@
 
             <!-- Upload CSV Button -->
             <Button
-                android:id="@+id/uploadPicButton"
+                android:id="@+id/uploadroomPicButton"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:backgroundTint="#006A00"
                 android:paddingVertical="12dp"
-                android:text="Upload Pictures"
+                android:text="Upload Room's Pictures"
                 android:textAllCaps="false"
                 android:textColor="@android:color/white"
                 android:textSize="16sp"
                 android:textStyle="bold" />
         </LinearLayout>
     </androidx.cardview.widget.CardView>
+
+</LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
