--- a/app/src/main/res/layout/activity_calendar.xml
+++ b/app/src/main/res/layout/activity_calendar.xml
@@ -188,6 +188,15 @@ android:padding="16dp">
     android:padding="10dp"
     app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/standaloneRecycler"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        android:layout_below="@id/classRecycler"/>
+
+
 </LinearLayout>
 
 
