--- a/app/src/main/res/layout/activity_rooms.xml
+++ b/app/src/main/res/layout/activity_rooms.xml
@@ -166,58 +166,58 @@
                     app:layout_constraintEnd_toEndOf="parent" />
 
                 <LinearLayout
+                    app:layout_constraintTop_toBottomOf="@id/Divider"
+                    android:id="@+id/rkbs"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:padding="10dp">
+
+                    <ImageView
                         app:layout_constraintTop_toBottomOf="@id/Divider"
-                        android:id="@+id/rkbs"
+
+                        android:id="@+id/rkb_g"
+                        android:layout_marginBottom="10dp"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="vertical"
-                        android:padding="10dp">
+                        android:layout_height="700dp"
+                        android:adjustViewBounds="true"
+                        android:scaleType="centerCrop"
+                        android:src="@drawable/loading_pic"
+                        android:contentDescription="@null" />
 
-                        <ImageView
-                            app:layout_constraintTop_toBottomOf="@id/Divider"
+                    <ImageView
+                        android:id="@+id/rkb_1"
+                        android:layout_marginBottom="10dp"
 
-                            android:id="@+id/rkb_g"
-                            android:layout_marginBottom="10dp"
-                            android:layout_width="match_parent"
-                            android:layout_height="700dp"
-                            android:adjustViewBounds="true"
-                            android:scaleType="centerCrop"
-                            android:src="@drawable/loading_pic"
-                            android:contentDescription="@null" />
+                        android:layout_width="match_parent"
+                        android:layout_height="700dp"
+                        android:adjustViewBounds="true"
+                        android:scaleType="centerCrop"
+                        android:src="@drawable/loading_pic"
+                        android:contentDescription="@null" />
 
-                        <ImageView
-                            android:id="@+id/rkb_1"
-                            android:layout_marginBottom="10dp"
+                    <ImageView
+                        android:id="@+id/rkb_2"
+                        android:layout_marginBottom="10dp"
 
-                            android:layout_width="match_parent"
-                            android:layout_height="700dp"
-                            android:adjustViewBounds="true"
-                            android:scaleType="centerCrop"
-                            android:src="@drawable/loading_pic"
-                            android:contentDescription="@null" />
+                        android:layout_width="match_parent"
+                        android:layout_height="700dp"
+                        android:adjustViewBounds="true"
+                        android:scaleType="centerCrop"
+                        android:src="@drawable/loading_pic"
+                        android:contentDescription="@null" />
 
-                        <ImageView
-                            android:id="@+id/rkb_2"
-                            android:layout_marginBottom="10dp"
+                    <ImageView
+                        android:id="@+id/rkb_3"
+                        android:layout_marginBottom="10dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="700dp"
+                        android:adjustViewBounds="true"
+                        android:scaleType="centerCrop"
+                        android:src="@drawable/loading_pic"
+                        android:contentDescription="@null" />
 
-                            android:layout_width="match_parent"
-                            android:layout_height="700dp"
-                            android:adjustViewBounds="true"
-                            android:scaleType="centerCrop"
-                            android:src="@drawable/loading_pic"
-                            android:contentDescription="@null" />
-
-                        <ImageView
-                            android:id="@+id/rkb_3"
-                            android:layout_marginBottom="10dp"
-                            android:layout_width="match_parent"
-                            android:layout_height="700dp"
-                            android:adjustViewBounds="true"
-                            android:scaleType="centerCrop"
-                            android:src="@drawable/loading_pic"
-                            android:contentDescription="@null" />
-
-                    </LinearLayout>
+                </LinearLayout>
                 <LinearLayout
                     app:layout_constraintTop_toBottomOf="@id/rkbs"
 
@@ -271,6 +271,25 @@
                         android:contentDescription="@null" />
 
                 </LinearLayout>
+                <LinearLayout
+                    app:layout_constraintTop_toBottomOf="@id/Divider"
+
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/recyclerViewSearchResults"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="top"
+                        android:padding="8dp"
+                        android:layout_marginTop="110dp"
+                        android:background="#00FFFFFF"
+                        android:visibility="gone"
+                        android:elevation="16dp"
+                         />
+                </LinearLayout>
+
+
 
 
 
