--- a/app/src/main/res/layout/activity_student_home_page.xml
+++ b/app/src/main/res/layout/activity_student_home_page.xml
@@ -401,6 +401,8 @@
                         app:cardElevation="4dp">
 
                         <LinearLayout
+                            android:id="@+id/routineCardView"
+
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:orientation="vertical"
