--- a/app/src/main/res/layout/activity_teacher_routine.xml
+++ b/app/src/main/res/layout/activity_teacher_routine.xml
@@ -109,126 +109,7 @@
 
 
 
-                <!-- Current Class Card -->
-                <androidx.cardview.widget.CardView
-                    android:id="@+id/currentClassCard"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
-                    android:layout_marginHorizontal="5dp"
-                    app:cardElevation="4dp"
-                    app:cardCornerRadius="8dp"
-                    app:layout_constraintStart_toStartOf="parent"
-                    tools:ignore="MissingConstraints">
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="vertical"
-
-                        android:padding="16dp">
-
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:text="Current Class"
-                            android:textSize="18sp"
-                            android:textStyle="bold"
-                            android:textColor="@color/primaryDark"/>
-
-                        <TextView
-                            android:id="@+id/tvCurrentClass"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="8dp"
-                            android:textSize="16sp"
-                            android:lineSpacingExtra="4sp"
-                            android:text="No ongoing class"/>
-                    </LinearLayout>
-                </androidx.cardview.widget.CardView>
-
                 <!-- Next & Previous Class Container -->
-                <LinearLayout
-                    android:id="@+id/nextPrevContainer"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
-                    android:orientation="horizontal"
-                    android:weightSum="2"
-                    app:layout_constraintTop_toBottomOf="@id/currentClassCard">
-
-                    <!-- Next Class Card -->
-                    <androidx.cardview.widget.CardView
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:layout_marginEnd="4dp"
-                        android:layout_marginStart="4dp"
-                        android:layout_marginVertical="5dp"
-                        app:cardElevation="4dp"
-                        app:cardCornerRadius="8dp">
-
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:orientation="vertical"
-                            android:padding="16dp">
-
-                            <TextView
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:text="Next Class"
-                                android:textSize="16sp"
-                                android:textStyle="bold"
-                                android:textColor="@color/primaryDark"/>
-
-                            <TextView
-                                android:id="@+id/tvNextClass"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_marginTop="8dp"
-                                android:textSize="14sp"
-                                android:lineSpacingExtra="4sp"
-                                android:text="No upcoming class"/>
-                        </LinearLayout>
-                    </androidx.cardview.widget.CardView>
-
-                    <!-- Previous Class Card -->
-                    <androidx.cardview.widget.CardView
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:layout_marginVertical="5dp"
-                        android:layout_marginEnd="4dp"
-                        android:layout_marginStart="4dp"
-                        app:cardElevation="4dp"
-                        app:cardCornerRadius="8dp">
-
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:orientation="vertical"
-                            android:padding="16dp">
-
-                            <TextView
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:text="Previous Class"
-                                android:textSize="16sp"
-                                android:textStyle="bold"
-                                android:textColor="@color/primaryDark"/>
-
-                            <TextView
-                                android:id="@+id/tvPreviousClass"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_marginTop="8dp"
-                                android:textSize="14sp"
-                                android:lineSpacingExtra="4sp"
-                                android:text="No previous class"/>
-                        </LinearLayout>
-                    </androidx.cardview.widget.CardView>
-                </LinearLayout>
                 <LinearLayout
                     android:id="@+id/selectionRow"
                     android:layout_width="match_parent"
@@ -237,9 +118,6 @@
                     android:gravity="center_vertical"
                     android:padding="0dp"
                     android:layout_marginTop="5dp"
-
-
-                    app:layout_constraintTop_toBottomOf="@id/nextPrevContainer"
                     tools:ignore="MissingConstraints">
 
                     <androidx.cardview.widget.CardView
@@ -256,16 +134,16 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:orientation="horizontal"
-                            android:padding="12dp">
+                            android:padding="10dp">
 
-                            <Spinner
-                                android:id="@+id/spinnerBatch"
-                                android:layout_width="0dp"
+                            <TextView
+                                android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:layout_weight="1"
-                                android:padding="10dp"
-                                android:layout_marginEnd="8dp"/>
-
+                                android:textStyle="bold"
+                                android:text="Teacher Acronym: "
+                                android:textSize="18sp"
+                                android:layout_marginBottom="8dp"
+                                android:textColor="#000000" />
                             <Spinner
                                 android:id="@+id/spinnerSection"
                                 android:layout_width="0dp"
