--- a/app/src/main/res/layout/activity_cr_home_page.xml
+++ b/app/src/main/res/layout/activity_cr_home_page.xml
@@ -19,9 +19,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:fillViewport="true"
-            xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:app="http://schemas.android.com/apk/res-auto"
-            xmlns:tools="http://schemas.android.com/tools">
+            >
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/main"
@@ -357,7 +355,7 @@
                 <LinearLayout
                     android:id="@+id/routineRoomLayout"
                     android:layout_width="match_parent"
-                    android:layout_height="200dp"
+                    android:layout_height="120dp"
                     android:orientation="horizontal"
                     android:gravity="center"
                     android:layout_marginTop="0dp"
@@ -368,11 +366,11 @@
                     <androidx.cardview.widget.CardView
                         android:id="@+id/cr_routineCardView"
                         android:layout_width="0dp"
-                        android:layout_height="150dp"
+                        android:layout_height="100dp"
                         android:layout_weight="1"
                         android:layout_margin="8dp"
-                        app:cardCornerRadius="16dp"
-                        app:cardElevation="8dp">
+                        app:cardCornerRadius="10dp"
+                        app:cardElevation="4dp">
 
                         <LinearLayout
                             android:layout_width="match_parent"
@@ -383,8 +381,8 @@
 
                             <ImageView
                                 android:id="@+id/routineIcon"
-                                android:layout_width="90dp"
-                                android:layout_height="90dp"
+                                android:layout_width="45dp"
+                                android:layout_height="45dp"
                                 android:src="@drawable/routine"
                                 android:contentDescription="Routine Icon"
                                 android:layout_marginBottom="8dp" />
@@ -394,7 +392,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="Routine"
-                                android:textSize="30sp"
+                                android:textSize="20sp"
                                 android:textColor="@color/Theme_green"
                                 android:textStyle="bold" />
                         </LinearLayout>
@@ -403,11 +401,11 @@
                     <androidx.cardview.widget.CardView
                         android:id="@+id/CR_roomsCardView"
                         android:layout_width="0dp"
-                        android:layout_height="150dp"
+                        android:layout_height="100dp"
                         android:layout_weight="1"
                         android:layout_margin="8dp"
-                        app:cardCornerRadius="16dp"
-                        app:cardElevation="8dp">
+                        app:cardCornerRadius="10dp"
+                        app:cardElevation="4dp">
 
                         <LinearLayout
                             android:layout_width="match_parent"
@@ -418,18 +416,18 @@
 
                             <ImageView
                                 android:id="@+id/roomsIcon"
-                                android:layout_width="90dp"
-                                android:layout_height="90dp"
+                                android:layout_width="45dp"
+                                android:layout_height="45dp"
                                 android:src="@drawable/rooms"
                                 android:contentDescription="Rooms Icon"
-                                android:layout_marginBottom="8dp" />
+                                android:layout_marginBottom="0dp" />
 
                             <TextView
                                 android:id="@+id/roomsText"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="Rooms"
-                                android:textSize="30sp"
+                                android:textSize="20sp"
                                 android:textColor="@color/Theme_Lightgreen"
                                 android:textStyle="bold" />
                         </LinearLayout>
@@ -452,7 +450,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
-                    android:layout_marginTop="16dp"
+                    android:layout_marginTop="0dp"
                     android:padding="8dp"
                     app:layout_constraintTop_toBottomOf="@id/routineRoomLayout"
                     app:layout_constraintStart_toStartOf="parent"
@@ -470,18 +468,18 @@
 
                     <LinearLayout
                         android:layout_width="match_parent"
-                        android:layout_height="180dp"
-                        android:layout_marginBottom="20dp"
+                        android:layout_height="120dp"
+                        android:layout_marginBottom="0dp"
                         android:orientation="horizontal">
 
                         <androidx.cardview.widget.CardView
                             android:id="@+id/cr_teachersInfoCard"
                             android:layout_width="100dp"
-                            android:layout_height="150dp"
+                            android:layout_height="100dp"
                             android:layout_weight="1"
                             android:layout_margin="8dp"
-                            app:cardCornerRadius="16dp"
-                            app:cardElevation="8dp">
+                            app:cardCornerRadius="10dp"
+                            app:cardElevation="4dp">
 
                             <LinearLayout
                                 android:layout_width="match_parent"
@@ -492,12 +490,12 @@
 
                                 <ImageView
                                     android:id="@+id/teachersInfoIcon"
-                                    android:layout_width="100dp"
-                                    android:layout_height="100dp"
-                                    android:layout_marginLeft="10dp"
+                                    android:layout_width="45dp"
+                                    android:layout_height="45dp"
+                                    android:layout_marginEnd="10dp"
                                     android:src="@drawable/teacher_info"
                                     android:contentDescription="Teachers Info Icon"
-                                    android:layout_marginBottom="8dp" />
+                                    android:layout_marginBottom="0dp" />
 
                                 <TextView
                                     android:id="@+id/teachersInfoText"
@@ -515,11 +513,11 @@
                         <androidx.cardview.widget.CardView
                             android:id="@+id/othersRoutineCard"
                             android:layout_width="0dp"
-                            android:layout_height="150dp"
+                            android:layout_height="100dp"
                             android:layout_weight="1"
                             android:layout_margin="8dp"
-                            app:cardCornerRadius="16dp"
-                            app:cardElevation="8dp">
+                            app:cardCornerRadius="10dp"
+                            app:cardElevation="4dp">
 
                             <LinearLayout
                                 android:id="@+id/otherRoutine"
@@ -531,8 +529,8 @@
 
                                 <ImageView
                                     android:id="@+id/othersRoutineIcon"
-                                    android:layout_width="60dp"
-                                    android:layout_height="60dp"
+                                    android:layout_width="45dp"
+                                    android:layout_height="45dp"
                                     android:src="@drawable/others_routine"
                                     android:contentDescription="Others Routine Icon"
                                     android:layout_marginBottom="8dp" />
@@ -547,21 +545,22 @@
                                     android:textStyle="bold" />
                             </LinearLayout>
                         </androidx.cardview.widget.CardView>
+
                     </LinearLayout>
 
                     <LinearLayout
                         android:layout_width="match_parent"
-                        android:layout_height="180dp"
+                        android:layout_height="120dp"
                         android:orientation="horizontal">
 
                         <androidx.cardview.widget.CardView
                             android:id="@+id/universityMapCard"
                             android:layout_width="0dp"
-                            android:layout_height="150dp"
+                            android:layout_height="100dp"
                             android:layout_weight="1"
                             android:layout_margin="8dp"
-                            app:cardCornerRadius="16dp"
-                            app:cardElevation="8dp">
+                            app:cardCornerRadius="10dp"
+                            app:cardElevation="4dp">
 
                             <LinearLayout
                                 android:layout_width="match_parent"
@@ -572,11 +571,11 @@
 
                                 <ImageView
                                     android:id="@+id/universityMapIcon"
-                                    android:layout_width="60dp"
-                                    android:layout_height="60dp"
+                                    android:layout_width="45dp"
+                                    android:layout_height="45dp"
                                     android:src="@drawable/map_icon"
                                     android:contentDescription="University Map Icon"
-                                    android:layout_marginBottom="8dp" />
+                                    android:layout_marginBottom="0dp" />
 
                                 <TextView
                                     android:id="@+id/universityMapText"
@@ -592,11 +591,11 @@
                         <androidx.cardview.widget.CardView
                             android:id="@+id/upcomingTaskCard"
                             android:layout_width="100dp"
-                            android:layout_height="150dp"
+                            android:layout_height="100dp"
                             android:layout_weight="1"
                             android:layout_margin="8dp"
-                            app:cardCornerRadius="16dp"
-                            app:cardElevation="8dp">
+                            app:cardCornerRadius="10dp"
+                            app:cardElevation="4dp">
 
                             <LinearLayout
                                 android:layout_width="match_parent"
@@ -605,14 +604,18 @@
                                 android:background="@drawable/card_bg_row"
                                 android:gravity="center">
 
+
+                                <!-- app:tint="@color/Theme_green" dia color change koris -->
                                 <ImageView
                                     android:id="@+id/upcomingTaskIcon"
-                                    android:layout_width="100dp"
-                                    android:layout_height="100dp"
-                                    android:layout_marginLeft="15dp"
+                                    android:layout_width="45dp"
+                                    android:layout_height="45dp"
+                                    android:layout_marginEnd="15dp"
                                     android:src="@drawable/task_icon"
+                                    app:tint="@color/Theme_green"
+
                                     android:contentDescription="Upcoming Task Icon"
-                                    android:layout_marginBottom="8dp" />
+                                    android:layout_marginBottom="0dp" />
 
                                 <TextView
                                     android:id="@+id/upcomingTaskText"
@@ -627,6 +630,91 @@
                             </LinearLayout>
                         </androidx.cardview.widget.CardView>
                     </LinearLayout>
+
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="120dp"
+                        android:layout_marginBottom="0dp"
+                        android:orientation="horizontal">
+
+                        <androidx.cardview.widget.CardView
+                            android:id="@+id/editRtncard"
+                            android:layout_width="100dp"
+                            android:layout_height="100dp"
+                            android:layout_weight="1"
+                            android:layout_margin="8dp"
+                            app:cardCornerRadius="10dp"
+                            app:cardElevation="4dp">
+
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:orientation="horizontal"
+                                android:background="@drawable/card_bg_row"
+                                android:gravity="center">
+
+                                <ImageView
+                                    android:id="@+id/EditTaskimg"
+                                    android:layout_width="45dp"
+                                    android:layout_height="45dp"
+                                    android:layout_marginEnd="10dp"
+                                    android:src="@drawable/teacher_info"
+                                    android:contentDescription="Teachers Info Icon"
+                                    android:layout_marginBottom="0dp" />
+
+                                <TextView
+                                    android:id="@+id/editTasktxt"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_marginRight="15dp"
+                                    android:text="Edit task/class"
+                                    android:textSize="20sp"
+                                    android:textAlignment="center"
+                                    android:textColor="@color/Theme_green"
+                                    android:textStyle="bold" />
+                            </LinearLayout>
+                        </androidx.cardview.widget.CardView>
+
+                        <androidx.cardview.widget.CardView
+                            android:id="@+id/tcrRoutineCard"
+                            android:layout_width="0dp"
+                            android:layout_height="100dp"
+                            android:layout_weight="1"
+                            android:layout_margin="8dp"
+                            app:cardCornerRadius="10dp"
+                            app:cardElevation="4dp">
+
+                            <LinearLayout
+                                android:id="@+id/tcrRoutine"
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:orientation="vertical"
+                                android:background="@color/Theme_green"
+                                android:gravity="center">
+
+                                <ImageView
+                                    android:id="@+id/tcrRoutineIcon"
+                                    android:layout_width="45dp"
+                                    android:layout_height="45dp"
+                                    android:src="@drawable/others_routine"
+                                    android:contentDescription="Others Routine Icon"
+                                    android:layout_marginBottom="8dp" />
+
+                                <TextView
+                                    android:id="@+id/tcrRoutineText"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:text="Teachers Routine"
+                                    android:textSize="16sp"
+                                    android:textColor="@color/white"
+                                    android:textStyle="bold" />
+                            </LinearLayout>
+                        </androidx.cardview.widget.CardView>
+
+                    </LinearLayout>
+
+
                 </LinearLayout>
 
                 <ImageView
