--- a/app/src/main/res/layout/activity_cr_home_page.xml
+++ b/app/src/main/res/layout/activity_cr_home_page.xml
@@ -473,6 +473,171 @@
                         android:orientation="horizontal">
 
                         <androidx.cardview.widget.CardView
+                            android:id="@+id/editRtncard"
+                            android:layout_width="100dp"
+                            android:layout_height="100dp"
+                            android:layout_margin="8dp"
+                            android:layout_weight="1"
+                            app:cardCornerRadius="10dp"
+                            app:cardElevation="4dp">
+
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:background="@drawable/card_bg_row"
+                                android:gravity="center"
+                                android:orientation="horizontal">
+
+                                <ImageView
+                                    android:id="@+id/EditTaskimg"
+                                    android:layout_width="45dp"
+                                    android:layout_height="45dp"
+                                    android:layout_marginEnd="10dp"
+                                    android:layout_marginBottom="0dp"
+                                    android:contentDescription="Teachers Info Icon"
+                                    android:src="@drawable/teacher_info" />
+
+                                <TextView
+                                    android:id="@+id/editTasktxt"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_marginRight="15dp"
+                                    android:text="Edit task/class"
+                                    android:textAlignment="center"
+                                    android:textColor="@color/Theme_green"
+                                    android:textSize="20sp"
+                                    android:textStyle="bold" />
+                            </LinearLayout>
+                        </androidx.cardview.widget.CardView>
+
+                        <androidx.cardview.widget.CardView
+                            android:id="@+id/tcrRoutineCard"
+                            android:layout_width="0dp"
+                            android:layout_height="100dp"
+                            android:layout_margin="8dp"
+                            android:layout_weight="1"
+                            app:cardCornerRadius="10dp"
+                            app:cardElevation="4dp">
+
+                            <LinearLayout
+                                android:id="@+id/tcrRoutine"
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:background="@color/Theme_green"
+                                android:gravity="center"
+                                android:orientation="vertical">
+
+                                <ImageView
+                                    android:id="@+id/tcrRoutineIcon"
+                                    android:layout_width="45dp"
+                                    android:layout_height="45dp"
+                                    android:layout_marginBottom="8dp"
+                                    android:contentDescription="Others Routine Icon"
+                                    android:src="@drawable/others_routine" />
+
+                                <TextView
+                                    android:id="@+id/tcrRoutineText"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:text="Teachers Routine"
+                                    android:textColor="@color/white"
+                                    android:textSize="14dp"
+                                    android:textStyle="bold" />
+                            </LinearLayout>
+                        </androidx.cardview.widget.CardView>
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="120dp"
+                        android:orientation="horizontal">
+
+                        <androidx.cardview.widget.CardView
+                            android:id="@+id/universityMapCard"
+                            android:layout_width="0dp"
+                            android:layout_height="100dp"
+                            android:layout_margin="8dp"
+                            android:layout_weight="1"
+                            app:cardCornerRadius="10dp"
+                            app:cardElevation="4dp">
+
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:background="@color/Theme_green"
+                                android:gravity="center"
+                                android:orientation="vertical">
+
+                                <ImageView
+                                    android:id="@+id/universityMapIcon"
+                                    android:layout_width="45dp"
+                                    android:layout_height="45dp"
+                                    android:layout_marginBottom="0dp"
+                                    android:contentDescription="University Map Icon"
+                                    android:src="@drawable/map_icon" />
+
+                                <TextView
+                                    android:id="@+id/universityMapText"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:text="University Map"
+                                    android:textColor="@color/white"
+                                    android:textSize="14dp"
+                                    android:textStyle="bold" />
+                            </LinearLayout>
+                        </androidx.cardview.widget.CardView>
+
+                        <androidx.cardview.widget.CardView
+                            android:id="@+id/upcomingTaskCard"
+                            android:layout_width="100dp"
+                            android:layout_height="100dp"
+                            android:layout_margin="8dp"
+                            android:layout_weight="1"
+                            app:cardCornerRadius="10dp"
+                            app:cardElevation="4dp">
+
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:background="@drawable/card_bg_row"
+                                android:gravity="center"
+                                android:orientation="horizontal">
+
+
+                                <!-- app:tint="@color/Theme_green" dia color change koris -->
+                                <ImageView
+                                    android:id="@+id/upcomingTaskIcon"
+                                    android:layout_width="45dp"
+                                    android:layout_height="45dp"
+                                    android:layout_marginEnd="15dp"
+                                    android:layout_marginBottom="0dp"
+                                    android:contentDescription="Upcoming Task Icon"
+
+                                    android:src="@drawable/task_icon"
+                                    app:tint="@color/Theme_green" />
+
+                                <TextView
+                                    android:id="@+id/upcomingTaskText"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_marginRight="15dp"
+                                    android:text="Upcoming Task"
+                                    android:textAlignment="center"
+                                    android:textColor="@color/Theme_green"
+                                    android:textSize="20sp"
+                                    android:textStyle="bold" />
+                            </LinearLayout>
+                        </androidx.cardview.widget.CardView>
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="120dp"
+                        android:layout_marginBottom="0dp"
+                        android:orientation="horizontal">
+
+                        <androidx.cardview.widget.CardView
                             android:id="@+id/cr_teachersInfoCard"
                             android:layout_width="100dp"
                             android:layout_height="100dp"
@@ -540,173 +705,7 @@
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:text="Others Routine"
-                                    android:textSize="16sp"
-                                    android:textColor="@color/white"
-                                    android:textStyle="bold" />
-                            </LinearLayout>
-                        </androidx.cardview.widget.CardView>
-
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="120dp"
-                        android:orientation="horizontal">
-
-                        <androidx.cardview.widget.CardView
-                            android:id="@+id/universityMapCard"
-                            android:layout_width="0dp"
-                            android:layout_height="100dp"
-                            android:layout_weight="1"
-                            android:layout_margin="8dp"
-                            app:cardCornerRadius="10dp"
-                            app:cardElevation="4dp">
-
-                            <LinearLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent"
-                                android:orientation="vertical"
-                                android:background="@color/Theme_green"
-                                android:gravity="center">
-
-                                <ImageView
-                                    android:id="@+id/universityMapIcon"
-                                    android:layout_width="45dp"
-                                    android:layout_height="45dp"
-                                    android:src="@drawable/map_icon"
-                                    android:contentDescription="University Map Icon"
-                                    android:layout_marginBottom="0dp" />
-
-                                <TextView
-                                    android:id="@+id/universityMapText"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:text="University Map"
-                                    android:textSize="16sp"
-                                    android:textColor="@color/white"
-                                    android:textStyle="bold" />
-                            </LinearLayout>
-                        </androidx.cardview.widget.CardView>
-
-                        <androidx.cardview.widget.CardView
-                            android:id="@+id/upcomingTaskCard"
-                            android:layout_width="100dp"
-                            android:layout_height="100dp"
-                            android:layout_weight="1"
-                            android:layout_margin="8dp"
-                            app:cardCornerRadius="10dp"
-                            app:cardElevation="4dp">
-
-                            <LinearLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent"
-                                android:orientation="horizontal"
-                                android:background="@drawable/card_bg_row"
-                                android:gravity="center">
-
-
-                                <!-- app:tint="@color/Theme_green" dia color change koris -->
-                                <ImageView
-                                    android:id="@+id/upcomingTaskIcon"
-                                    android:layout_width="45dp"
-                                    android:layout_height="45dp"
-                                    android:layout_marginEnd="15dp"
-                                    android:src="@drawable/task_icon"
-                                    app:tint="@color/Theme_green"
-
-                                    android:contentDescription="Upcoming Task Icon"
-                                    android:layout_marginBottom="0dp" />
-
-                                <TextView
-                                    android:id="@+id/upcomingTaskText"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:layout_marginRight="15dp"
-                                    android:text="Upcoming Task"
-                                    android:textSize="20sp"
-                                    android:textColor="@color/Theme_green"
-                                    android:textAlignment="center"
-                                    android:textStyle="bold" />
-                            </LinearLayout>
-                        </androidx.cardview.widget.CardView>
-                    </LinearLayout>
-
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="120dp"
-                        android:layout_marginBottom="0dp"
-                        android:orientation="horizontal">
-
-                        <androidx.cardview.widget.CardView
-                            android:id="@+id/editRtncard"
-                            android:layout_width="100dp"
-                            android:layout_height="100dp"
-                            android:layout_weight="1"
-                            android:layout_margin="8dp"
-                            app:cardCornerRadius="10dp"
-                            app:cardElevation="4dp">
-
-                            <LinearLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent"
-                                android:orientation="horizontal"
-                                android:background="@drawable/card_bg_row"
-                                android:gravity="center">
-
-                                <ImageView
-                                    android:id="@+id/EditTaskimg"
-                                    android:layout_width="45dp"
-                                    android:layout_height="45dp"
-                                    android:layout_marginEnd="10dp"
-                                    android:src="@drawable/teacher_info"
-                                    android:contentDescription="Teachers Info Icon"
-                                    android:layout_marginBottom="0dp" />
-
-                                <TextView
-                                    android:id="@+id/editTasktxt"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:layout_marginRight="15dp"
-                                    android:text="Edit task/class"
-                                    android:textSize="20sp"
-                                    android:textAlignment="center"
-                                    android:textColor="@color/Theme_green"
-                                    android:textStyle="bold" />
-                            </LinearLayout>
-                        </androidx.cardview.widget.CardView>
-
-                        <androidx.cardview.widget.CardView
-                            android:id="@+id/tcrRoutineCard"
-                            android:layout_width="0dp"
-                            android:layout_height="100dp"
-                            android:layout_weight="1"
-                            android:layout_margin="8dp"
-                            app:cardCornerRadius="10dp"
-                            app:cardElevation="4dp">
-
-                            <LinearLayout
-                                android:id="@+id/tcrRoutine"
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent"
-                                android:orientation="vertical"
-                                android:background="@color/Theme_green"
-                                android:gravity="center">
-
-                                <ImageView
-                                    android:id="@+id/tcrRoutineIcon"
-                                    android:layout_width="45dp"
-                                    android:layout_height="45dp"
-                                    android:src="@drawable/others_routine"
-                                    android:contentDescription="Others Routine Icon"
-                                    android:layout_marginBottom="8dp" />
-
-                                <TextView
-                                    android:id="@+id/tcrRoutineText"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:text="Teachers Routine"
-                                    android:textSize="16sp"
+                                    android:textSize="14dp"
                                     android:textColor="@color/white"
                                     android:textStyle="bold" />
                             </LinearLayout>
