--- a/app/src/main/res/layout/activity_teacher_homepage.xml
+++ b/app/src/main/res/layout/activity_teacher_homepage.xml
@@ -84,6 +84,7 @@
         <!-- Top card view Ends -->
 
         <androidx.core.widget.NestedScrollView
+            android:id="@+id/nestedScrollView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginTop="40dp"
@@ -281,14 +282,34 @@
                             android:layout_marginLeft="5dp"
                             android:orientation="vertical">
 
-                            <TextView
-                                android:id="@+id/tv_teacher_name"
-                                android:layout_width="wrap_content"
+                            <LinearLayout
+                                android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:text="Teacher "
-                                android:textStyle="bold"
-                                android:textColor="#006A00"
-                                android:textSize="18sp" />
+                                android:orientation="horizontal"
+
+                                >
+                                <TextView
+                                    android:id="@+id/tv_teacher_name"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:text="Teacher "
+                                    android:textStyle="bold"
+                                    android:textColor="#006A00"
+                                    android:textSize="18sp" />
+
+                                <TextView
+                                    android:id="@+id/tv_acronym"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:text="Acronym"
+                                    android:layout_marginLeft="140dp"
+                                    android:textColor="#006A00"
+                                    android:textSize="16sp" />
+                            </LinearLayout>
+
+
+
+
 
                             <TextView
                                 android:id="@+id/tv_designation"
@@ -298,14 +319,7 @@
                                 android:textColor="#006A00"
                                 android:textSize="16sp"
                                />
-                            <TextView
-                                android:id="@+id/tv_acronym"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:text="Acronym"
-                                android:textColor="#006A00"
-                                android:textSize="16sp"
-                                />
+
 
                             <TextView
                                 android:id="@+id/tv_email"
