--- a/app/src/main/res/layout/activity_upload_teacher_info.xml
+++ b/app/src/main/res/layout/activity_upload_teacher_info.xml
@@ -60,6 +60,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
+        android:visibility="gone"
         app:cardCornerRadius="16dp"
         app:cardElevation="8dp"
         app:cardUseCompatPadding="true"
